# etl_moderndatastack

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: customers_data.json  customers_data.jsonl  orders_data.json  orders_data.jsonl  products_data.json  products_data.jsonl
src/: generate_data.py  schema.py
src/raiz/: database.py  db.py  db_connection.py  load.py  main.py  models.py  settings.py
tests/: test_db_connection.py  test_example.py  test_generate_data.py
